# renderm

./: .gitignore  README.md
learnOpengl/: CMakeLists.txt
learnOpengl/cmake/: ConvertGLSL.cmake
learnOpengl/include/: glUtilFunction.h  glfRenderCallBack.h  gltest.cpp  glwSetting.h  mtrangle.h  renderFunctions.h  shader.h  std_afx.h
learnOpengl/include/template/: trenderDelegate.h
learnOpengl/src/: 5.1.framebuffers.fs  5.1.framebuffers_text2.fs  CMakeLists.txt  framebuffers.cpp  glUtilFunction.cpp  gltest.cpp  gltest6_1.cpp  gltest_framebuffer.cpp  main.cpp  mtrangle.cpp  renderFunctions.cpp  triangle.fs  triangle.vs  triangle_more_attr.fs  triangle_more_attr.vs  triangle_more_attr_texture.fs  triangle_more_attr_texture.vs
learnOpengl/test/: CMakeLists.txt  gltest.cpp
